# skypro_coursework_5

./: README.md  pyproject.toml  queries.sql
src/: api.py  db_functions.py  manager.py  utils.py
